# surgeist-css

./: AGENTS.md  Cargo.toml  README.md
api/: public-api.txt
plans/: 2026-06-21-surgeist-css-calc-parsing-integration.md  2026-06-25-surgeist-css-error-modeling-refactor.md  2026-07-03-surgeist-css-wide-validation.md  2026-07-03-validated-known-unsupported-support.md  2026-07-04-comprehensive-css-test-framework.md  2026-07-04-css-color-syntax.md  2026-07-04-css-keyframes-and-nesting.md  2026-07-04-css-layers-scope-pseudo-elements-content.md  2026-07-04-css-naming-rust-modeling-pass.md  2026-07-04-css-practical-pseudo-classes.md  2026-07-04-css-queries-fonts-imports-and-selectors.md  2026-07-04-css-variables.md  2026-07-04-mechanical-lib-refactor.md  2026-07-04-strict-selector-argument-support.md  css-snapshot-2026-review.md
src/: error.rs  lib.rs  syntax.rs  test_support.rs  tests.rs  validation.rs
src/parser/: background.rs  box_model.rs  effects.rs  font_face.rs  generated_content.rs  grid.rs  keyframes.rs  layout.rs  mod.rs  nesting.rs  queries.rs  selectors.rs  timing.rs  typography.rs  values.rs  variables.rs
